Fixes misalignment in pin mode

--- a/src/Pins/Pins.css
+++ b/src/Pins/Pins.css
@@ -22,7 +22,7 @@
 .row {
   display: flex;
   justify-content: space-between;
-  margin-left: 49px;
-  width: 1235px;
+  margin-left: 110px;
+  width: 1600px;
   margin-bottom: 4px;
 }
